# prism-live-studio

./: .gitattributes  .gitignore  .gitmodules  COPYING  LICENSES  README.md
src/: .pls-clangIgnoreList.txt  .pls-clangformat.bat  .pls-clangformat.py  CMakeLists.txt  CMakePresets.json
src/common-libs/: CMakeLists.txt
src/common-libs/daemon/: CMakeLists.txt  main.cpp
src/common-libs/libdump-analyzer/: CMakeLists.txt
src/common-libs/libdump-analyzer/PrismCommandLine/: CMakeLists.txt  main.cpp
src/common-libs/libdump-analyzer/libdump-analyzer/: CMakeLists.txt  PLSUtil.cpp  (+6 more)
src/common-libs/libhttp-client/: CMakeLists.txt  libhttp-client.cpp  libhttp-client.h
src/common-libs/libipc/: CMakeLists.txt  libipc.cpp  libipc.h
src/common-libs/liblog/: CMakeLists.txt  string-convert.cpp  string-convert.h
src/common-libs/libresource/: CMakeLists.txt  PLSCommonConst.h  PLSLicenseManager.cpp  PLSLicenseManager.h  PLSResCommonFuns.cpp  PLSResCommonFuns.h  PLSResEnums.h  PLSResourceHandle_global.h  PLSResourceManager.cpp  PLSResourceManager.h  libresource.cpp  libresource.h
src/common-libs/libtask/: CMakeLists.txt  libtask.cpp  libtask.h
src/common-libs/libui/: CMakeLists.txt  PLSAlertView.cpp  PLSAlertView.h  PLSAlertView.ui  PLSCheckBox.cpp  PLSCheckBox.h  PLSColorDialogView.cpp  PLSColorDialogView.h  PLSComboBox.cpp  PLSComboBox.h  PLSCommonScrollBar.cpp  PLSCommonScrollBar.h  PLSCustomMacWindow.h  PLSCustomMacWindow.mm  PLSDialogButtonBox.cpp  PLSDialogButtonBox.h  PLSDialogView.cpp  PLSDialogView.h  PLSDialogView.ui  PLSDock.cpp  PLSDock.h  PLSEdit.cpp  PLSEdit.h  PLSFontDialogView.cpp  PLSFontDialogView.h  PLSImageTextButton.cpp  PLSImageTextButton.h  PLSLabel.cpp  PLSLabel.h  PLSMenu.cpp  PLSMenu.h  PLSMenuPushButton.cpp  PLSMenuPushButton.h  PLSPushButton.cpp  PLSPushButton.h  PLSRadioButton.cpp  PLSRadioButton.h  PLSScrollingLabel.cpp  PLSScrollingLabel.h  PLSSearchLineEdit.cpp  (+33 more)
src/common-libs/libutils-api/: CMakeLists.txt  CrossProcessNotification.h  CrossProcessNotification.m  PLSMacFunction.h  PLSMacFunction.m  STPrivilegedTask.m  get_win_ver.cpp  libutils-api-log.cpp  libutils-api-log.h  libutils-api-mac.h  libutils-api-mac.mm  libutils-api.cpp  libutils-api.h  libutils-export.h  libutils-gpu-cpu-monitor-info-mac.mm  libutils-gpu-cpu-monitor-info.cpp  libutils-gpu-cpu-monitor-info.h  network-state-mac.h  network-state-mac.mm  network-state.cpp  network-state.h  pls-shared-values.cpp  pls-shared-values.h
src/common-libs/util-pc-detect/: CMakeLists.txt  main.cpp
src/obs/: CMakeLists.txt
src/obs/UI/: adv-audio-control.cpp  audio-encoders.cpp  auth-oauth.cpp  obs-app.cpp  properties-view.cpp  source-tree.cpp  window-basic-auto-config-test.cpp  window-basic-filters.cpp  window-basic-interaction.cpp  window-basic-main-outputs.cpp  window-basic-main-profiles.cpp  window-basic-main-scene-collections.cpp  window-basic-main-transitions.cpp  window-basic-main.cpp  window-basic-preview.cpp  window-basic-settings.cpp
src/obs/libobs/: CMakeLists.txt  obs-audio.c  obs-data.c  obs-data.h  obs-defs.h  obs-display.c  obs-encoder.c  obs-encoder.h  obs-hevc.c  obs-hevc.h  obs-hotkey-name-map.c  obs-hotkey.c  obs-hotkey.h  obs-internal.h  obs-module.c  obs-module.h  obs-output-delay.c  obs-output.c  obs-output.h  obs-properties.c  obs-properties.h  obs-scene.c  obs-scene.h  obs-service.c  obs-source-transition.c  obs-source.c  obs-source.h  obs-video-gpu-encode.c  obs-video.c  obs-view.c  obs-windows.c  obs.c  obs.h  obs.hpp
src/obs/libobs-d3d11/: d3d11-duplicator.cpp  d3d11-indexbuffer.cpp  d3d11-rebuild.cpp  d3d11-samplerstate.cpp  d3d11-shader.cpp  d3d11-shaderprocessor.cpp  d3d11-stagesurf.cpp  d3d11-subsystem.cpp  d3d11-subsystem.hpp  d3d11-texture2d.cpp  d3d11-vertexbuffer.cpp  d3d11-zstencilbuffer.cpp
src/obs/libobs-opengl/: gl-helpers.c  gl-helpers.h  gl-indexbuffer.c  gl-shader.c  gl-shaderparser.c  gl-stagesurf.c  gl-subsystem.c  gl-subsystem.h  gl-texture2d.c  gl-texturecube.c  gl-vertexbuffer.c  gl-windows.c  gl-zstencil.c
src/obs/libobs-winrt/: CMakeLists.txt  winrt-capture.cpp  winrt-capture.h  winrt-dispatch.cpp
src/obs/plugins/: CMakeLists.txt
src/prism/: .clang-format  .editorconfig  AUTHORS  CMakeLists.txt  build.cpp  copy-libs.cmd  httpserver.go  not-copy-bins.txt  obs-build.cmd  obs-configure.cmd  obs-copy-bins.cmd  prism-copy-bins.cmd
src/prism-live-studio/: CMakeLists.txt
src/prism-live-studio/PRISMLiveStudio/: CMakeLists.txt
src/prism-live-studio/cmake/: build.cpp  copy_data.cmake  copy_obs_bins.cmake  copy_target.cmake  deploy_qt.cmake  disable_api.cmake  obs-build.cmd  obs-configure.cmd  obs-env.cmd.in  prism-version.h.in
src/prism-live-studio/common/: CMakeLists.txt
src/prism/cmake/: ALL_BUILD.vcxproj.user.in  copy_helper.cmake  copy_obs_bins.cmake  copy_on_debug_helper.cmake  copy_prism_bins.cmake  copy_prism_plugin_target.cmake  copy_prism_target.cmake  copy_prism_theme_target.cmake  copy_target_file.cmake
src/prism/common/: CMakeLists.txt
src/prism/main/: CMakeLists.txt  DefaultSources.qrc  GiphyDefine.h  GiphyDownloader.cpp  GiphyDownloader.h  GiphyWebHandler.cpp  GiphyWebHandler.h  PLSAction.cpp  PLSAction.h  PLSAddSourceMenuStyle.cpp  PLSAddSourceMenuStyle.hpp  PLSAddSourceView.cpp  PLSAddSourceView.h  PLSAudioMixerScrollBar.cpp  PLSAudioMixerScrollBar.h  PLSBackgroundMusicView.cpp  PLSBackgroundMusicView.h  PLSBeautyDataMgr.cpp  PLSBeautyDataMgr.h  PLSBeautyDefine.h  PLSBeautyFaceItemView.cpp  PLSBeautyFaceItemView.h  PLSBeautyFilterView.cpp  PLSBeautyFilterView.h  PLSBeautySlider.cpp  PLSBeautySlider.h  PLSBgmDataManager.cpp  PLSBgmDataManager.h  PLSBgmDragView.cpp  PLSBgmDragView.h  PLSBgmItemCoverView.cpp  PLSBgmItemCoverView.h  PLSBgmItemDelegate.cpp  PLSBgmItemDelegate.h  PLSBgmItemView.cpp  PLSBgmItemView.h  PLSBgmLibraryView.cpp  PLSBgmLibraryView.h  PLSBlockDump.cpp  PLSBlockDump.h  (+297 more)
src/prism/plugins/: CMakeLists.txt
src/prism/sub/: CMakeLists.txt
src/test/: CMakeLists.txt
src/test/prism-tests/: CMakeLists.txt  ChzzkChannel.cpp  ChzzkChannel.h  ChzzkLogin.cpp  ChzzkLogin.h  TestCase.cpp  TestCase.h  main.cpp
(+3163 files in other folders)
